# vidnn

./: .gitignore  README.md  pyproject.toml
docker/: Dockerfile
runs/lightning_logs/version_1/: events.out.tfevents.1759040123.server-robotegra.850656.0  hparams.yaml
runs/lightning_logs/version_2/: events.out.tfevents.1760425372.server-robotegra.3747003.0  hparams.yaml
vidnn/: check_dataloader.py  run_docker.sh  tmp.py  train.py
vidnn/configs/: yolo-ladybug.yaml  yolo-obb.yaml  yolo-seg.yaml  yolo.yaml
vidnn/data/: augmentations.py  check_data.py  datamodule.py  dataset.py  utils.py
vidnn/models/detect/: mobilenetv3_large_100_yolo.py  mobilenetv3_yolov8.py
vidnn/models/obb/: mobilenetv3_large_100_obb.py
vidnn/models/segment/: mobilenetv3_large_100_seg.py
vidnn/models/yolo/detect/: mobilenetv3_yolov8.py
vidnn/modes/: export.py  optuna_test.py  predict.py  train.py  val.py
vidnn/module/: inference.py  tasks.py  yolo_detector.py
vidnn/nn/: block.py  conv.py  head.py  neck.py
vidnn/saved/lightning_logs/version_0/: events.out.tfevents.1756969887.server-robotegra.3070942.0
vidnn/saved/lightning_logs/version_1/: events.out.tfevents.1756970119.server-robotegra.3073696.0
vidnn/saved/lightning_logs/version_10/: events.out.tfevents.1757035927.server-robotegra.3753249.0
vidnn/tasks/detect/: optuna_test.py  predict.py  train.py  val.py
vidnn/utils/: __init__.py  callbacks.py  loss copy.py  loss.py  lr_scheduler copy.py  lr_scheduler.py  metrics.py  module_select.py  ops.py  plotting.py  tal.py  torch_utils.py  yaml_helper.py
(+9 files in other folders)
