[build-system]
requires = ["setuptools>=70.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vidnn"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Myungsang Lee", email = "lms0577@gmail.com" },
]
dependencies = [
    "torch==2.7.1",
    "torchvision==0.22.1",
    "opencv-python==4.12.0.88",
    "lightning==2.5.5",
    "albumentations==2.0.8",
    "timm==1.0.20",
    "tensorboard==2.20.0",
    "optuna==4.5.0",
    "optuna-integration==4.5.0",
]

# Tools settings -------------------------------------------------------------------------------------------------------
[tool.setuptools]  # configuration specific to the `setuptools` build backend.
packages = { find = { where = ["."], include = ["vidnn", "vidnn.*"] } }